# Facial-Data-Anonymization-with-Deep-Neural-Networks

./: README.md
head_swap/: pyproject.toml
head_swap/age_gender_model/: README.md  age_gender.py  wide_resnet.py
head_swap/age_gender_model/misc/: .gitignore
head_swap/network/: test.py  train.py  utils.py
head_swap/network/data/: add_dimension_aligned_dataset.py  base_dataset.py  duplicate_dataset.py  swaped_mask_dataset.py  unaligned_dataset.py  unaligned_domain_dataset.py  warped_mask_dataset.py
head_swap/network/models/: networks.py  pix2pix_facenet_model.py  pix2pix_keypoints_model.py  pix2pix_model.py  pix2pix_unaligned_domain_loss_kornia_model.py  pix2pix_unaligned_domain_loss_model.py  pix2pix_vgg_facenet_model.py  pix2pix_vgg_model.py  pix2pix_vgg_weightedL1_model.py  pix2pix_weightedL1_edges_model.py  pix2pix_weightedL1_model.py
head_swap/network/options/: base_options.py  pippeline_options.py  test_options.py  train_options.py
head_swap/network/util/: html.py  visualizer.py
head_swap/postprocess/: get_metrics.py
head_swap/preprocess/: create_blending_dataset.py  cutout_face_from_segmentation.py  enhance_masks.py  face_detector.py  facenet.py  plot_test_results.py  process_celebA_masks_pix2pix.py  reinsert_face.py  transform.py  utils.py  video_handler.py
segmentation/: README.md  pyproject.toml
segmentation/core/data/dataloader/: __init__.py  (+1 more)
segmentation/core/models/: cgnet.py  deeplabv3.py  deeplabv3_plus.py  model_store.py  model_zoo.py
segmentation/core/utils/: visualize.py
segmentation/scripts/: demo.py  eval.py  train.py
(+7 files in other folders)
